Adds better fallthrough for unit/landlord autocomplete

--- a/app/views/union/tenancies/_form.html.erb
+++ b/app/views/union/tenancies/_form.html.erb
@@ -13,8 +13,7 @@
 
   <div class="field">
     <%= form.label :unit_id, "Address" %>
-    <%= form.search_field :unit_Address, placeholder: "Street Address...", id: "unit_autocomplete", data: { behavior: "autocomplete" } %>    
-    <%= form.hidden_field :unit_id %>
+    <%= form.search_field :unit_address, placeholder: "Street Address...", id: "unit_autocomplete", data: { behavior: "autocomplete" } %>    
   </div>
 
   <div class="field">
@@ -38,7 +37,6 @@
   <div class="field">
     <%= form.label :landlord_id, "Landlord" %>
     <%= form.search_field :landlord_name, placeholder: "Enter name...", id: "landlord_autocomplete", data: { behavior: "autocomplete" } %>    
-    <%= form.hidden_field :landlord_id %>
   </div>
 
   <div class="field">
@@ -87,6 +85,6 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Save", class: "ui button green" %>
   </div>
 <% end %>
