Gently forces the autocomplete fields to default values
Fixes #25

Cancancan load_and_authorize_resource was trying to do the create/update
business automatically. It's disabled for those actions and manually
authorized in the actions instead.

The fields were not getting their default values set correctly, so I
changed the value to directly point to the model's virtual attributes
that have graceful degradation.

--- a/app/views/union/tenancies/_form.html.erb
+++ b/app/views/union/tenancies/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :unit_id, "Address" %>
-    <%= form.search_field :unit_address, placeholder: "Street Address...", id: "unit_autocomplete", data: { behavior: "autocomplete" } %>    
+    <%= form.search_field :unit_address, placeholder: "Street Address...", value: form.object.unit_address, id: "unit_autocomplete", data: { behavior: "autocomplete" } %>    
   </div>
 
   <div class="field">
@@ -36,7 +36,7 @@
 
   <div class="field">
     <%= form.label :landlord_id, "Landlord" %>
-    <%= form.search_field :landlord_name, placeholder: "Enter name...", id: "landlord_autocomplete", data: { behavior: "autocomplete" } %>    
+    <%= form.search_field :landlord_name, placeholder: "Enter name...", value: form.object.landlord_name, id: "landlord_autocomplete", data: { behavior: "autocomplete" } %>    
   </div>
 
   <div class="field">
