--- a/app/views/units/_unit_card.html.erb
+++ b/app/views/units/_unit_card.html.erb
@@ -4,10 +4,10 @@
   </div>
   <div class="content">
     <p>
-      Average Rating <%= rating_grade(@landlord.ratings.overall_average) %>
+      Average Rating <%= rating_grade(unit_card.ratings.overall_average) %>
     </p>
     <p>
-      Reviewed <%= @landlord.ratings.size %> times
+      Reviewed <%= unit_card.ratings.size %> times
     </p>
   </div>
   <div class="extra content">
