--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   <meta name="author" content="@armahillo">
   <meta name="description" content="organizing tool for ithaca tenants' union">
   <meta name="keywords" content="tenant,union,organizing,ithaca">
+  <link rel="apple-touch-icon" sizes="180x180" href="<%= image_path('favicons/apple-touch-icon.png') %>">
+  <link rel="icon" type="image/png" sizes="32x32" href="<%= image_path('favicons/favicon-32x32.png') %>">
+  <link rel="icon" type="image/png" sizes="16x16" href="<%= image_path('favicons/favicon-16x16.png') %>">
+  <link rel="manifest" href="<%= image_path('favicons/site.webmanifest') %>">
+  <link rel="mask-icon" href="<%= image_path('favicons/safari-pinned-tab.svg') %>" color="#5bbad5">
+  <link rel="shortcut icon" href="<%= image_path('favicons/favicon.ico') %>">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="<%= image_path('favicons/browserconfig.xml') %>">
+  <meta name="theme-color" content="#ffffff">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     
